# cspirit_ontology_information_extraction_Opus4plan

./: .gitignore  .markdownlint.json  .markdownlintignore  .pre-commit-config.yaml  =1.3.4  =3.0.0  AIM2-002-10_Installation_Validation_Report.md  CONTRIBUTING.md  ENHANCED_FIGURE_TABLE_EXTRACTION.md  ENHANCEMENT_SUMMARY.md  ERROR_RECOVERY_TESTS_README.md  EXPORT_FUNCTIONALITY_SUMMARY.md  LICENSE  MULTISOURCE_STATISTICS_ENHANCEMENT_SUMMARY.md  MULTI_SOURCE_VERIFICATION_REPORT.md  Makefile  ONTOLOGY_LOADING_VERIFICATION_REPORT.md  ONTOLOGY_MANAGER_ERROR_HANDLING_TEST_REPORT.md  OWL_PARSER_IMPLEMENTATION_SUMMARY.md  RDF_TRIPLE_EXTRACTION_DESIGN_SUMMARY.md  RDF_TRIPLE_EXTRACTION_SUMMARY.md  RDF_TRIPLE_EXTRACTION_TESTS_SUMMARY.md  README.md  SCHEMA_VALIDATION_IMPLEMENTATION.md  SETUP_ENV_TEST_SUMMARY.md  SETUP_INSTRUCTIONS.md  XML_PARSER_ENHANCEMENTS_SUMMARY.md  branch_protection_commands.md  conftest.py  debug_logging_test.py  demo_enhanced_dialect_detection.py  demo_enhanced_extraction.py  demo_error_recovery.py  demo_export_features.py  demo_figure_table_extraction.py  demo_ontology_loading_simple.py  demo_pdf_parser.py  demo_rdf_extraction.py  integration_test_performance_logging.py  performance_integration_verification.py  (+38 more)
aim2_project/: README_OntologyManager.md  __init__.py  demo_ontology_manager.py  exceptions.py  requirements.txt  test_ontology_manager.py  test_ontology_manager_integration.py
aim2_project/aim2_extraction/: ner_extractor.py
aim2_project/aim2_ontology/: enhanced_cache.py  models.py  ontology_integrator.py  ontology_manager.py  ontology_trimmer.py  statistics_cache.py  validators.py
aim2_project/aim2_ontology/parsers/: __init__.py  content_utils.py  metadata_framework.py  pdf_parser.py  reference_parser.py  reference_patterns.py  xml_parser.py
aim2_project/aim2_ontology/parsers/citation_formats/: __init__.py  apa_handler.py  base_handler.py  ieee_handler.py  mla_handler.py
aim2_project/aim2_utils/: __init__.py  colored_console_handler.py  config_manager.py  config_validator.py  context_injection.py  json_formatter.py  logger_config.py  logger_factory.py  logger_manager.py  performance_decorators.py  request_context.py  rotating_file_handler.py
aim2_project/configs/: database_schema.yaml  default_config.yaml
docs/: checklist.md  checklist_grouped_by_MVP.md  configuration.md  diagram.md  error_code_system_design.md  exception_usage_guidelines.md  old_checklist.md  old_tickets.md  plan.md  roadmap.md  tickets.md  tickets_to_test_asap.mdp
scripts/: README_demo_log_rotation.md  demo_log_rotation.py  group_checklist.py
test_reports/: clean_env_report.html
tests/: README.md  README_setup_env_tests.md  __init__.py  conftest.py  test_context_injection.py  test_json_formatter.py  test_performance_decorators.py  test_runner.py  test_setup_env.py
tests/fixtures/: test_data.py
tests/integration/: __init__.py  test_figure_table_extraction.py  test_log_rotation_integration.py  test_ontology_manager_multisource_integration.py  test_setup_integration.py
tests/unit/: __init__.py  test_abstract_document_parser.py  test_colored_console_handler.py  test_config_manager.py  test_config_validator.py  test_content_utils.py  test_csv_parser.py  test_dependencies.py  test_error_recovery.py  test_error_recovery_integration.py  test_exceptions.py  test_format_autodetection.py  test_jsonld_parser.py  test_log_formatters.py  test_logger_config.py  test_logger_factory.py  test_metadata_framework.py  test_models.py  test_ontology.py  test_ontology_manager_caching.py  test_ontology_manager_error_handling.py  test_ontology_manager_multisource.py  test_ontology_manager_multisource.py.backup  test_ontology_manager_statistics.py  test_owl_parser.py  test_pdf_parser.py  test_pdf_parser_enhanced.py  test_progress_reporting.py  test_reference_parser.py  test_relationship.py  test_rotating_file_handler.py  test_setup.py  test_term.py  test_text_extraction.py  test_xml_parser.py  test_xml_parser_enhanced.py
venv_new/: pyvenv.cfg
